# geo-search

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  docker-entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.prod/: uwsgi.ini
address/api/: views.py
address/migrations/: 0012_unique_together_and_constraint_updates.py
address/tests/: test_api_views.py
