[project]
name = "geo-search"
requires-python = ">=3.12, <3.13"
version = "2.1.6"
dependencies = [
    "django",
    "django-cors-headers",
    "django-gisserver",
    "django-environ",
    "django-helsinki-health-endpoints",
    "django-parler",
    "django-parler-rest",
    "djangorestframework",
    "djangorestframework-api-key",
    "djangorestframework-xml",
    "drf-spectacular",
    "psycopg[c]",
    "requests",
    "sentry-sdk[django]",
    "whitenoise",
    "uwsgi",
    "uwsgitop",
]

[dependency-groups]
dev = [
    "ipython",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "factory-boy",
]

[tool.uv]
package = false
exclude-newer = "1 week"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear without opinionated rules
    "B0",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
]
[tool.ruff.lint.extend-per-file-ignores]
"*/migrations/*" = ["E501"]
"*/tests/*" = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "geo_search.settings"
filterwarnings = [
    # Ignore cache key warnings during testing
    "ignore:Cache key contains characters that will cause errors if used with memcached:RuntimeWarning:django",
]
